Adjusted contact mailer to real domain instead of sandbox and rails structure for troubleshoot issue

--- a/config/database.yml
+++ b/config/database.yml
@@ -20,11 +20,13 @@ default: &default
   # For details on connection pooling, see Rails configuration guide
   # http://guides.rubyonrails.org/configuring.html#database-pooling
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
-
+  username: postgres
+  password: !!BME1966
+  
 development:
   <<: *default
   database: ngpartsWebsite_development
-
+  
   # The specified database role being used to connect to postgres.
   # To create additional roles in postgres see `$ createuser --help`.
   # When left blank, postgres will use the default role. This is
@@ -81,5 +83,3 @@ test:
 production:
   <<: *default
   database: ngpartsWebsite_production
-  username: ngpartsWebsite
-  password: <%= ENV['NGPARTSWEBSITE_DATABASE_PASSWORD'] %>
